Table app_user {
  id integer [pk, increment]
  username text [unique]
  password_hash text
  display_name text [not null]
  is_demo integer [not null, default: 0]
  created_at text [not null]
}

Table auth_access_token {
  token_hash text [pk, note: '32-byte opaque token의 SHA-256 hash; 원문 저장 금지']
  user_id integer [not null, ref: > app_user.id]
  expires_at integer [not null, note: '절대 만료 Unix epoch seconds; 발급 후 30일']
  created_at text [not null]
  note: '리프레시 토큰 없는 단일 액세스 토큰. 로그아웃·계정 삭제 시 폐기'
}

Table user_onboarding {
  user_id integer [pk, ref: > app_user.id]
  entry_choice text [not null, note: 'PRODUCT | ROUTINE | EXPLORE']
  selected_product_count integer [not null, default: 0]
  completed_at text [not null]
}

Table user_preference {
  user_id integer [pk, ref: > app_user.id]
  texture_likes_json text [not null, default: '[]']
  texture_avoids_json text [not null, default: '[]']
  note text [not null, default: '']
  updated_at text [not null]
  note: 'ONB-01. 온보딩 프로필과 설정에서 받은 사용감 선호.'
}

Table user_skin_profile {
  user_id integer [pk, ref: > app_user.id]
  age_range text [not null, note: '10S | 20S | 30S | 40S | 50S | 60_PLUS']
  gender text [not null, note: 'MALE | FEMALE']
  skin_type text [not null, note: 'DRY | OILY | COMBINATION | NORMAL | UNSURE']
  skin_condition integer [not null, note: '1..5 최근 자기보고 상태']
  concerns_json text [not null]
  textures_json text [not null]
  avoids_json text [not null, default: '[]']
  avoid_note text [not null, default: '']
  trial_frequency text [not null, note: 'RARELY | EVERY_FEW_MONTHS | ONE_OR_TWO_MONTHLY | THREE_PLUS_MONTHLY']
  updated_at text [not null]
  note: '현재 8단계 온보딩에서 사용자가 직접 선택한 자기보고 프로필'
}

Table product {
  id integer [pk]
  brand text [not null]
  name text [not null]
  category text [not null]
  volume text
  version_label text
  description text [not null, note: '출처 미확인 카탈로그 설명, 제품별 AI 가이드 입력으로만 사용']
  texture text [note: '등록 제형 label; 비사실 guide 생성에만 사용하며 source-backed fact가 아님']
  verified integer [not null, note: 'legacy flag; public verified는 source fact 존재를 함께 검사']
  facts_json text [not null, note: '출처 미확인 카탈로그 특징, 가이드 입력으로만 사용하며 source fact로 승격하지 않음']
  image_url text
}

Table brand_asset {
  brand text [pk, note: 'product.brand 또는 custom_brand와 exact match하는 표시 이름']
  logo_url text [not null, note: '저장소에 포함된 /manufacturer-logos/* 공개 경로']
  source_url text [note: '공식 로고 출처. 중립 카탈로그 마크는 null']
}

Table product_catalog_content {
  product_id integer [pk, ref: > product.id]
  summary text [not null]
  routine_step text [not null]
  usage_type text [not null]
  usage_timing_json text [not null]
  usage_tips_json text [not null, note: 'legacy physical name; API usageInstructions 일반 사용법 배열']
  observation_points_json text [not null, note: 'legacy physical name; API highlights {title, detail} 제품 특징 배열']
  origin text [not null, note: 'AI_GENERATED | EDITORIAL']
  generated_at text [not null]
}

Table product_source_fact {
  id integer [pk, increment]
  product_id integer [not null, ref: > product.id]
  fact_type text [not null, note: 'DIRECTIONS | TEXTURE | LABEL_CLAIM | CAUTION | SUN_PROTECTION | INGREDIENT_LABEL | CERTIFICATION']
  fact_text text [not null]
  source_label text [not null]
  source_url text [not null]
  checked_at text [not null]
  created_at text [not null]

  indexes {
    (product_id, fact_type, fact_text, source_url) [unique]
    (product_id, id)
  }
}

Table product_achievement {
  id integer [pk, increment]
  product_id integer [not null, ref: > product.id]
  achievement_type text [not null, note: 'AWARD | RANKING | MILESTONE']
  period_label text [not null, note: '성과가 발생한 시점 또는 기간']
  title text [not null]
  detail text [not null]
  source_label text [not null]
  source_url text [not null]
  checked_at text [not null]
  display_order integer [not null, default: 0]
  created_at text [not null]

  indexes {
    (product_id, achievement_type, title, period_label, source_url) [unique]
    (product_id, display_order, id)
  }
}

Table user_product {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  product_id integer [ref: > product.id]
  custom_brand text
  custom_name text
  custom_category text
  memo text
  added_at text [not null]
}

Table routine {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  name text [not null]
  day_part text [not null, note: 'MORNING | EVENING | ANYTIME']
  status text [not null, note: 'CURRENT | BASELINE | PAST']
  based_on_routine_id integer [ref: > routine.id]
  started_at text [not null]
  ended_at text
}

Table routine_insight {
  routine_id integer [pk, ref: > routine.id]
  insight_text text [not null, note: '개인 기록·자기보고 맥락에서 AI가 만든 읽기 전용 자유문장']
  model text [not null]
  prompt_version text [not null]
  input_snapshot_json text [not null, default: '{}', note: '사용한 개인 맥락의 종류와 원본 record ID snapshot']
  generated_at text [not null]
}

Table routine_insight_keyword {
  routine_id integer [not null, ref: > routine_insight.routine_id]
  position integer [not null, note: '0..2']
  keyword text [not null, note: 'AI가 개인 맥락에서 정리한 짧은 표현']

  indexes {
    (routine_id, position) [pk]
    (routine_id, keyword) [unique]
  }
}

Table routine_item {
  id integer [pk, increment]
  routine_id integer [not null, ref: > routine.id]
  user_product_id integer [not null, ref: > user_product.id]
  time_slot text [not null, note: 'MORNING | EVENING | BOTH']
  position integer [not null]
  frequency text [not null]
}

Table experience_session {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  subject_type text [not null, note: 'ROUTINE | PRODUCT']
  routine_id integer [ref: > routine.id]
  user_product_id integer [ref: > user_product.id]
  title text [not null]
  status text [not null, note: 'ACTIVE | COMPLETED | CANCELLED']
  started_at text [not null]
  review_due_at text [not null]
  ended_at text
  end_reason text
  client_request_id text
}

Table experience_record {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  session_id integer [ref: > experience_session.id]
  user_product_id integer [ref: > user_product.id]
  sentiment text [not null, note: 'LIKED | DISAPPOINTED | UNSURE']
  note text [not null]
  discomfort text [not null, note: 'NOT_REPORTED | REPORTED | UNKNOWN']
  adherence text [not null, note: 'MATCHED | PARTIAL | DIFFERENT | UNKNOWN']
  created_at text [not null]
  client_request_id text [not null]
}

Table experience_tag {
  record_id integer [not null, ref: > experience_record.id]
  label text [not null]
  indexes { (record_id, label) [pk] }
}

Table comparison_baseline {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  routine_id integer [not null, ref: > routine.id]
  confirmed_record_id integer [ref: > experience_record.id]
  started_at text [not null]
  ended_at text
}

Table personal_pattern {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  title text [not null]
  summary text [not null]
  confidence_note text [not null]
  status text [not null, note: 'ACTIVE | HIDDEN']
  created_at text [not null]
  updated_at text [not null]
}

Table pattern_evidence {
  pattern_id integer [not null, ref: > personal_pattern.id]
  record_id integer [not null, ref: > experience_record.id]
  polarity text [not null, note: 'SUPPORTS | CONTRADICTS']
  indexes { (pattern_id, record_id) [pk] }
}

Table notification {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  notification_type text [not null, note: 'EXPERIENCE_CHECK_IN | EXPERIENCE_REVIEW_DUE | PROFILE_READY | PROFILE_UPDATED | PATTERN_READY | PRODUCT_DISCOVERY']
  experience_id integer [ref: > experience_session.id]
  pattern_id integer [ref: > personal_pattern.id]
  title text [not null]
  body text [not null]
  available_at text [not null]
  read_at text
  snoozed_until text
  completed_at text
  cancelled_at text
  dedupe_key text [not null]
  created_at text [not null]

  indexes {
    (user_id, dedupe_key) [unique]
    (user_id, available_at, id)
  }
  note: '경험 due와 별도로 앱 안 알림의 읽음·미루기·완료·취소 상태를 저장'
}

Table conversation {
  id integer [pk, increment]
  user_id integer [not null, ref: > app_user.id]
  mode text [not null, note: 'GENERAL | PRODUCT | RECOMMEND | PATTERN | RESCUE']
  product_id integer [ref: > product.id]
  experience_id integer [ref: > experience_session.id]
  status text [not null, note: 'OPEN | CLOSED']
  created_at text [not null]
  updated_at text [not null]
}

Table conversation_message {
  id integer [pk, increment]
  conversation_id integer [not null, ref: > conversation.id]
  role text [not null, note: 'USER | ASSISTANT']
  content text [not null]
  suggested_replies_json text [not null]
  evidence_refs_json text [not null]
  status text [not null, note: 'READY | FALLBACK | FAILED']
  client_request_id text
  created_at text [not null]
}

Table conversation_message_source {
  message_id integer [not null, ref: > conversation_message.id]
  source_order integer [not null]
  title text [not null]
  url text [not null]
  source_tier text [not null, note: 'P1 | P2 | P3 | P4']
  indexes {
    (message_id, source_order) [pk]
    (message_id, url) [unique]
  }
}

Table rescue_plan {
  id integer [pk, increment]
  conversation_id integer [not null, unique, ref: > conversation.id]
  base_routine_id integer [ref: > routine.id]
  remove_user_product_id integer [ref: > user_product.id]
  title text [not null]
  rationale text [not null]
  status text [not null, note: 'PROPOSED | APPLIED | DECLINED | BLOCKED']
  applied_experience_id integer [ref: > experience_session.id]
  created_at text [not null]
}
